--- a/edu.javaScript.introduccionClase/src/main/webapp/index.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>index.html</title>
+<title>Menú</title>
 </head>
 <body>
-	<a href="vistaJsHead.html">javaScript en head</a>
+	<a href="vistaJsHead.html">JS en HEAD</a>
 	    <br>
-	<a href="vistaJsBody.html">javaScript en body</a>
+	<a href="vistaJsBody.html">JS en BODY</a>
+		<br>
+	<a href="tiposDeDatos.html">Tipos de Datos</a>
+	
 </body>
 </html>
