--- a/edu.javaScript.introduccionClase/src/main/webapp/pabloEjercicio.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/pabloEjercicio.html
@@ -1,3 +1,12 @@
+<!-- 
+genera un alert que diga "Pablo es el Mejor"
+
+genera un boton   que haga lo de esta funcion de abajo
+
+function cambiaColor(colorin){
+
+ document.bgColor = colorin  
+} -->
 <!DOCTYPE html>
 <html>
 <head>
