--- a/edu.javaScript.introduccionClase/src/main/webapp/primerasLetras2.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/primerasLetras2.html
@@ -14,5 +14,7 @@ JavaScript -->
 </head>
 <body>
 <button onclick="primerasLetras('Buenas tardes Aaron',0)">Primera Letra</button>
+<button onclick="primerasLetras('Buenas tardes Aaron',1)">Segunda Letra</button>
+<button onclick="primerasLetras('Buenas tardes Aaron',2)">Tercera Letra</button>
 </body>
 </html>
