--- a/edu.javaScript.introduccionClase/src/main/webapp/pabloEjercicio.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/pabloEjercicio.html
@@ -15,7 +15,7 @@ function cambiaColor(colorin){
 <script src="script/pabloEjercicio.js"></script>
 </head>
 <body>
-<button onclick="frasePablo()">alerta</button>
+<button onclick="frasePablo()">Alerta</button>
 <button onclick="cambiaColor('00ff00')">cambiaColor</button>
 </body>
 </html>
