--- a/edu.javaScript.introduccionClase/src/main/webapp/array1.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/array1.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <button onclick="lista()">lista</button>
+<hr>
 <button onclick="lista2()">lista2</button>
+<hr>
+<button onclick="concatenar1()">concatenar1</button>
+<hr>
+<button onclick="concatenar2()">concatenar2</button>
 </body>
 </html>
