--- a/edu.javaScript.introduccionClase/src/main/webapp/EjerciciosObligatorios.html
+++ b/edu.javaScript.introduccionClase/src/main/webapp/EjerciciosObligatorios.html
@@ -4,11 +4,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>El primer script</title>
 <!-- Se carga el archivo de scripts para que puedan funcionar en nuestra vista -->
-<script src="script/codigo.js"></script>
+<script src="script/codigo1.js"></script>
 </head>
 <body>
 <p>Esta página contiene el primer script</p>
 <!-- Al pulsar este botón llamamos a la función del primer script -->
 <button onclick="primerScript()">Pulse para el primer Script</button>
+<p>4ºEjercicio</p>
+<button onclick="masLargo()">Mas Largo</button>
+<button onclick="trueYFalse()">True y False</button>
+<button onclick="operaciones()">Operaciones</button>
+<button onclick="incremento()">Incremento</button>
+<button onclick="decremento()">Decremento</button>
+<button onclick="exponente()">Exponente</button>
+<p>5ºEjercicio</p>
+<button onclick="if1()">Primer if</button>
+<button onclick="if2()">Segundo if</button>
+<button onclick="if3()">Tercer if</button>
+<button onclick="if4()">Cuarto if</button>
 </body>
 </html>
